plugins {
    id 'com.android.application'
    id 'kotlin-android'
    id 'kotlin-parcelize'
    id 'com.google.devtools.ksp'
    id 'dagger.hilt.android.plugin'
    id 'org.jlleitschuh.gradle.ktlint'
}

android {
    compileSdk 34
    defaultConfig {
        applicationId "com.picpay.desafio.android"
        minSdkVersion 21
        targetSdkVersion 34
        versionCode 1
        versionName "1.0"
    }

    buildFeatures {
        viewBinding true
    }

    buildTypes {
        release {
            minifyEnabled true
            shrinkResources true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }

    testOptions {
        unitTests.all {
            jvmArgs += ['-XX:+EnableDynamicAgentLoading']
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    kotlinOptions {
        jvmTarget = JavaVersion.VERSION_1_8.toString()
    }

    packaging {
        resources {
            it.pickFirsts += ["META-INF/LICENSE.md", "META-INF/LICENSE-notice.md"]
        }
    }

    namespace "com.picpay.desafio.android"
}

dependencies {
    implementation project(":core:common")
    implementation project(":core:data")
    implementation project(":core:domain")
    implementation project(":core:designsystem")
    implementation project(":feature:contact")

    implementation "androidx.core:core-ktx:$core_ktx_version"
    implementation "androidx.appcompat:appcompat:$appcompat_version"

    implementation "androidx.activity:activity-ktx:$activity_version"

    implementation "com.google.dagger:hilt-android:$hilt_version"
    ksp "com.google.dagger:hilt-compiler:$hilt_version"
}
